--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>Notepad</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Notes for remainder</a>
+    <a class="navbar-brand" href="#">Notepad</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,15 +45,29 @@
           <textarea class="form-control" id="addtxt" rows="3"></textarea>
         </div>
         <button class="btn btn-primary" id="addbtn">Add Notes</button>
-      </div>
+      </div> 
     </div>
     <hr>
     <h1>Your Notes</h1>
     <hr>
-    <div id="notes" class="row container-fluid ">
+    <div id="notes" class="row container-fluid "></div>
 
-      
+    <div class="containers my-4">
+      <div class="card bg-dark" id="card" style="width:100%;">
+        <img src="sayan.jpg" id="image" class="card-img-top" >
+        <div class="card-body">
+          <p class="card-text">Created by Sayan Roy</p>
+          <p>Cotact info: <br>    
+            Email:  <a href="mailto:sayanroy1698@gmail.com">sayanroy1698@gmail.com</a><br>
+          Mobile:  <a href="tell:9101193945">9101193945</a><br><br> For more you can visit here,<br>
+         <a href="https://www.linkedin.com/in/sayan-roy-426b581a3/"> LinkedIn</a> &nbsp;&nbsp;&nbsp;
 
+            <a href="https://www.facebook.com/sayan.roy.77964201">Facebook</a>&nbsp; &nbsp;&nbsp;
+
+             <a href="https://www.instagram.com/sayan1774/">Instagram</a>
+          <br></p>
+        </div>
+      </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
