--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Notepad</a>
+    <a class="navbar-brand">Notepad</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -31,18 +31,18 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" id="search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        
       </form>
     </div>
   </nav>
 
   <div class="container my-4 ">
-    <h2 class="text-center">Welcome to our Notepad</h2>
-    <div class="card bg-dark" style="width:100%;">
+    <h2 class="text-center">Welcome to Notepad</h2>
+    <div class="card bg-dark my-3" style="width:100%;">
       <div class="card-body ">
         <h5 class="card-title">Add a Notes</h5>
         <div class="form-group">
-          <textarea class="form-control" id="addtxt" rows="3"></textarea>
+          <textarea placeholder="Write your notes." class="form-control" id="addtxt" rows="3"></textarea>
         </div>
         <button class="btn btn-primary" id="addbtn">Add Notes</button>
       </div> 
@@ -56,7 +56,7 @@
       <div class="card bg-dark" id="card" style="width:100%;">
         <img src="sayan.jpg" id="image" class="card-img-top" >
         <div class="card-body">
-          <p class="card-text">Created by Sayan Roy</p>
+          <p class="card-text">Devoloped by Sayan Roy</p>
           <p>Cotact info: <br>    
             Email:  <a href="mailto:sayanroy1698@gmail.com">sayanroy1698@gmail.com</a><br>
           Mobile:  <a href="tell:9101193945">9101193945</a><br><br> For more you can visit here,<br>
